--- a/scss/demo1.scss
+++ b/scss/demo1.scss
@@ -8,7 +8,7 @@ h1{
 p{
   color: darken($red, 10%);
 }
-//Ç¶Ì×
+//Ã‡Â¶ÃŒÃ—
 .speaker{
   .name{
     font:{
@@ -36,7 +36,7 @@ h1{
   @include border-radius(10px);
 }
 
-//Ñ¡ÔñÆ÷¼Ì³Ð
+//ç»§æ‰¿
 .hh1{
   border:4px solid #ff9aa9;
 }
